notes/shni_grammar_reduced.output
Grammar

    0 $accept: program $end

    1 program: linebreak complete_commands linebreak
    2        | linebreak

    3 complete_commands: complete_commands newline_list and_or
    4                  | and_or

    5 and_or: pipeline
    6       | and_or AND_IF linebreak pipeline
    7       | and_or OR_IF linebreak pipeline

    8 pipeline: command
    9         | pipeline PIPE linebreak command

   10 command: simple_command
   11        | subshell
   12        | subshell redirect_list

   13 subshell: OPAR compound_list CPAR

   14 compound_list: linebreak term
   15              | linebreak term newline_list

   16 term: term newline_list and_or
   17     | and_or

   18 simple_command: cmd_prefix cmd_word cmd_suffix
   19               | cmd_prefix cmd_word
   20               | cmd_prefix
   21               | cmd_name cmd_suffix
   22               | cmd_name

   23 cmd_name: WORD

   24 cmd_word: WORD

   25 cmd_prefix: io_redirect
   26           | cmd_prefix io_redirect

   27 cmd_suffix: io_redirect
   28           | cmd_suffix io_redirect
   29           | WORD
   30           | cmd_suffix WORD

   31 redirect_list: io_redirect
   32              | redirect_list io_redirect

   33 io_redirect: io_file
   34            | io_here

   35 io_file: LESS filename
   36        | GREAT filename
   37        | DGREAT filename

   38 filename: WORD

   39 io_here: DLESS here_end

   40 here_end: WORD

   41 newline_list: NEWLINE
   42             | newline_list NEWLINE

   43 linebreak: newline_list
   44          | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    WORD (258) 23 24 29 30 38 40
    NEWLINE (259) 41 42
    PIPE (260) 9
    LESS (261) 35
    GREAT (262) 36
    DLESS (263) 39
    DGREAT (264) 37
    AND_IF (265) 6
    OR_IF (266) 7
    OPAR (267) 13
    CPAR (268) 13


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    program (15)
        on left: 1 2
        on right: 0
    complete_commands (16)
        on left: 3 4
        on right: 1 3
    and_or (17)
        on left: 5 6 7
        on right: 3 4 6 7 16 17
    pipeline (18)
        on left: 8 9
        on right: 5 6 7 9
    command (19)
        on left: 10 11 12
        on right: 8 9
    subshell (20)
        on left: 13
        on right: 11 12
    compound_list (21)
        on left: 14 15
        on right: 13
    term (22)
        on left: 16 17
        on right: 14 15 16
    simple_command (23)
        on left: 18 19 20 21 22
        on right: 10
    cmd_name (24)
        on left: 23
        on right: 21 22
    cmd_word (25)
        on left: 24
        on right: 18 19
    cmd_prefix (26)
        on left: 25 26
        on right: 18 19 20 26
    cmd_suffix (27)
        on left: 27 28 29 30
        on right: 18 21 28 30
    redirect_list (28)
        on left: 31 32
        on right: 12 32
    io_redirect (29)
        on left: 33 34
        on right: 25 26 27 28 31 32
    io_file (30)
        on left: 35 36 37
        on right: 33
    filename (31)
        on left: 38
        on right: 35 36 37
    io_here (32)
        on left: 39
        on right: 34
    here_end (33)
        on left: 40
        on right: 39
    newline_list (34)
        on left: 41 42
        on right: 3 15 16 42 43
    linebreak (35)
        on left: 43 44
        on right: 1 2 6 7 9 14 15


State 0

    0 $accept: • program $end

    NEWLINE  shift, and go to state 1

    $default  reduce using rule 44 (linebreak)

    program       go to state 2
    newline_list  go to state 3
    linebreak     go to state 4


State 1

   41 newline_list: NEWLINE •

    $default  reduce using rule 41 (newline_list)


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

   42 newline_list: newline_list • NEWLINE
   43 linebreak: newline_list •

    NEWLINE  shift, and go to state 6

    $default  reduce using rule 43 (linebreak)


State 4

    1 program: linebreak • complete_commands linebreak
    2        | linebreak •

    WORD    shift, and go to state 7
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11
    OPAR    shift, and go to state 12

    $default  reduce using rule 2 (program)

    complete_commands  go to state 13
    and_or             go to state 14
    pipeline           go to state 15
    command            go to state 16
    subshell           go to state 17
    simple_command     go to state 18
    cmd_name           go to state 19
    cmd_prefix         go to state 20
    io_redirect        go to state 21
    io_file            go to state 22
    io_here            go to state 23


State 5

    0 $accept: program $end •

    $default  accept


State 6

   42 newline_list: newline_list NEWLINE •

    $default  reduce using rule 42 (newline_list)


State 7

   23 cmd_name: WORD •

    $default  reduce using rule 23 (cmd_name)


State 8

   35 io_file: LESS • filename

    WORD  shift, and go to state 24

    filename  go to state 25


State 9

   36 io_file: GREAT • filename

    WORD  shift, and go to state 24

    filename  go to state 26


State 10

   39 io_here: DLESS • here_end

    WORD  shift, and go to state 27

    here_end  go to state 28


State 11

   37 io_file: DGREAT • filename

    WORD  shift, and go to state 24

    filename  go to state 29


State 12

   13 subshell: OPAR • compound_list CPAR

    NEWLINE  shift, and go to state 1

    $default  reduce using rule 44 (linebreak)

    compound_list  go to state 30
    newline_list   go to state 3
    linebreak      go to state 31


State 13

    1 program: linebreak complete_commands • linebreak
    3 complete_commands: complete_commands • newline_list and_or

    NEWLINE  shift, and go to state 1

    $default  reduce using rule 44 (linebreak)

    newline_list  go to state 32
    linebreak     go to state 33


State 14

    4 complete_commands: and_or •
    6 and_or: and_or • AND_IF linebreak pipeline
    7       | and_or • OR_IF linebreak pipeline

    AND_IF  shift, and go to state 34
    OR_IF   shift, and go to state 35

    $default  reduce using rule 4 (complete_commands)


State 15

    5 and_or: pipeline •
    9 pipeline: pipeline • PIPE linebreak command

    PIPE  shift, and go to state 36

    $default  reduce using rule 5 (and_or)


State 16

    8 pipeline: command •

    $default  reduce using rule 8 (pipeline)


State 17

   11 command: subshell •
   12        | subshell • redirect_list

    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11

    $default  reduce using rule 11 (command)

    redirect_list  go to state 37
    io_redirect    go to state 38
    io_file        go to state 22
    io_here        go to state 23


State 18

   10 command: simple_command •

    $default  reduce using rule 10 (command)


State 19

   21 simple_command: cmd_name • cmd_suffix
   22               | cmd_name •

    WORD    shift, and go to state 39
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11

    $default  reduce using rule 22 (simple_command)

    cmd_suffix   go to state 40
    io_redirect  go to state 41
    io_file      go to state 22
    io_here      go to state 23


State 20

   18 simple_command: cmd_prefix • cmd_word cmd_suffix
   19               | cmd_prefix • cmd_word
   20               | cmd_prefix •
   26 cmd_prefix: cmd_prefix • io_redirect

    WORD    shift, and go to state 42
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11

    $default  reduce using rule 20 (simple_command)

    cmd_word     go to state 43
    io_redirect  go to state 44
    io_file      go to state 22
    io_here      go to state 23


State 21

   25 cmd_prefix: io_redirect •

    $default  reduce using rule 25 (cmd_prefix)


State 22

   33 io_redirect: io_file •

    $default  reduce using rule 33 (io_redirect)


State 23

   34 io_redirect: io_here •

    $default  reduce using rule 34 (io_redirect)


State 24

   38 filename: WORD •

    $default  reduce using rule 38 (filename)


State 25

   35 io_file: LESS filename •

    $default  reduce using rule 35 (io_file)


State 26

   36 io_file: GREAT filename •

    $default  reduce using rule 36 (io_file)


State 27

   40 here_end: WORD •

    $default  reduce using rule 40 (here_end)


State 28

   39 io_here: DLESS here_end •

    $default  reduce using rule 39 (io_here)


State 29

   37 io_file: DGREAT filename •

    $default  reduce using rule 37 (io_file)


State 30

   13 subshell: OPAR compound_list • CPAR

    CPAR  shift, and go to state 45


State 31

   14 compound_list: linebreak • term
   15              | linebreak • term newline_list

    WORD    shift, and go to state 7
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11
    OPAR    shift, and go to state 12

    and_or          go to state 46
    pipeline        go to state 15
    command         go to state 16
    subshell        go to state 17
    term            go to state 47
    simple_command  go to state 18
    cmd_name        go to state 19
    cmd_prefix      go to state 20
    io_redirect     go to state 21
    io_file         go to state 22
    io_here         go to state 23


State 32

    3 complete_commands: complete_commands newline_list • and_or
   42 newline_list: newline_list • NEWLINE
   43 linebreak: newline_list •

    WORD     shift, and go to state 7
    NEWLINE  shift, and go to state 6
    LESS     shift, and go to state 8
    GREAT    shift, and go to state 9
    DLESS    shift, and go to state 10
    DGREAT   shift, and go to state 11
    OPAR     shift, and go to state 12

    $default  reduce using rule 43 (linebreak)

    and_or          go to state 48
    pipeline        go to state 15
    command         go to state 16
    subshell        go to state 17
    simple_command  go to state 18
    cmd_name        go to state 19
    cmd_prefix      go to state 20
    io_redirect     go to state 21
    io_file         go to state 22
    io_here         go to state 23


State 33

    1 program: linebreak complete_commands linebreak •

    $default  reduce using rule 1 (program)


State 34

    6 and_or: and_or AND_IF • linebreak pipeline

    NEWLINE  shift, and go to state 1

    $default  reduce using rule 44 (linebreak)

    newline_list  go to state 3
    linebreak     go to state 49


State 35

    7 and_or: and_or OR_IF • linebreak pipeline

    NEWLINE  shift, and go to state 1

    $default  reduce using rule 44 (linebreak)

    newline_list  go to state 3
    linebreak     go to state 50


State 36

    9 pipeline: pipeline PIPE • linebreak command

    NEWLINE  shift, and go to state 1

    $default  reduce using rule 44 (linebreak)

    newline_list  go to state 3
    linebreak     go to state 51


State 37

   12 command: subshell redirect_list •
   32 redirect_list: redirect_list • io_redirect

    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11

    $default  reduce using rule 12 (command)

    io_redirect  go to state 52
    io_file      go to state 22
    io_here      go to state 23


State 38

   31 redirect_list: io_redirect •

    $default  reduce using rule 31 (redirect_list)


State 39

   29 cmd_suffix: WORD •

    $default  reduce using rule 29 (cmd_suffix)


State 40

   21 simple_command: cmd_name cmd_suffix •
   28 cmd_suffix: cmd_suffix • io_redirect
   30           | cmd_suffix • WORD

    WORD    shift, and go to state 53
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11

    $default  reduce using rule 21 (simple_command)

    io_redirect  go to state 54
    io_file      go to state 22
    io_here      go to state 23


State 41

   27 cmd_suffix: io_redirect •

    $default  reduce using rule 27 (cmd_suffix)


State 42

   24 cmd_word: WORD •

    $default  reduce using rule 24 (cmd_word)


State 43

   18 simple_command: cmd_prefix cmd_word • cmd_suffix
   19               | cmd_prefix cmd_word •

    WORD    shift, and go to state 39
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11

    $default  reduce using rule 19 (simple_command)

    cmd_suffix   go to state 55
    io_redirect  go to state 41
    io_file      go to state 22
    io_here      go to state 23


State 44

   26 cmd_prefix: cmd_prefix io_redirect •

    $default  reduce using rule 26 (cmd_prefix)


State 45

   13 subshell: OPAR compound_list CPAR •

    $default  reduce using rule 13 (subshell)


State 46

    6 and_or: and_or • AND_IF linebreak pipeline
    7       | and_or • OR_IF linebreak pipeline
   17 term: and_or •

    AND_IF  shift, and go to state 34
    OR_IF   shift, and go to state 35

    $default  reduce using rule 17 (term)


State 47

   14 compound_list: linebreak term •
   15              | linebreak term • newline_list
   16 term: term • newline_list and_or

    NEWLINE  shift, and go to state 1

    $default  reduce using rule 14 (compound_list)

    newline_list  go to state 56


State 48

    3 complete_commands: complete_commands newline_list and_or •
    6 and_or: and_or • AND_IF linebreak pipeline
    7       | and_or • OR_IF linebreak pipeline

    AND_IF  shift, and go to state 34
    OR_IF   shift, and go to state 35

    $default  reduce using rule 3 (complete_commands)


State 49

    6 and_or: and_or AND_IF linebreak • pipeline

    WORD    shift, and go to state 7
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11
    OPAR    shift, and go to state 12

    pipeline        go to state 57
    command         go to state 16
    subshell        go to state 17
    simple_command  go to state 18
    cmd_name        go to state 19
    cmd_prefix      go to state 20
    io_redirect     go to state 21
    io_file         go to state 22
    io_here         go to state 23


State 50

    7 and_or: and_or OR_IF linebreak • pipeline

    WORD    shift, and go to state 7
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11
    OPAR    shift, and go to state 12

    pipeline        go to state 58
    command         go to state 16
    subshell        go to state 17
    simple_command  go to state 18
    cmd_name        go to state 19
    cmd_prefix      go to state 20
    io_redirect     go to state 21
    io_file         go to state 22
    io_here         go to state 23


State 51

    9 pipeline: pipeline PIPE linebreak • command

    WORD    shift, and go to state 7
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11
    OPAR    shift, and go to state 12

    command         go to state 59
    subshell        go to state 17
    simple_command  go to state 18
    cmd_name        go to state 19
    cmd_prefix      go to state 20
    io_redirect     go to state 21
    io_file         go to state 22
    io_here         go to state 23


State 52

   32 redirect_list: redirect_list io_redirect •

    $default  reduce using rule 32 (redirect_list)


State 53

   30 cmd_suffix: cmd_suffix WORD •

    $default  reduce using rule 30 (cmd_suffix)


State 54

   28 cmd_suffix: cmd_suffix io_redirect •

    $default  reduce using rule 28 (cmd_suffix)


State 55

   18 simple_command: cmd_prefix cmd_word cmd_suffix •
   28 cmd_suffix: cmd_suffix • io_redirect
   30           | cmd_suffix • WORD

    WORD    shift, and go to state 53
    LESS    shift, and go to state 8
    GREAT   shift, and go to state 9
    DLESS   shift, and go to state 10
    DGREAT  shift, and go to state 11

    $default  reduce using rule 18 (simple_command)

    io_redirect  go to state 54
    io_file      go to state 22
    io_here      go to state 23


State 56

   15 compound_list: linebreak term newline_list •
   16 term: term newline_list • and_or
   42 newline_list: newline_list • NEWLINE

    WORD     shift, and go to state 7
    NEWLINE  shift, and go to state 6
    LESS     shift, and go to state 8
    GREAT    shift, and go to state 9
    DLESS    shift, and go to state 10
    DGREAT   shift, and go to state 11
    OPAR     shift, and go to state 12

    $default  reduce using rule 15 (compound_list)

    and_or          go to state 60
    pipeline        go to state 15
    command         go to state 16
    subshell        go to state 17
    simple_command  go to state 18
    cmd_name        go to state 19
    cmd_prefix      go to state 20
    io_redirect     go to state 21
    io_file         go to state 22
    io_here         go to state 23


State 57

    6 and_or: and_or AND_IF linebreak pipeline •
    9 pipeline: pipeline • PIPE linebreak command

    PIPE  shift, and go to state 36

    $default  reduce using rule 6 (and_or)


State 58

    7 and_or: and_or OR_IF linebreak pipeline •
    9 pipeline: pipeline • PIPE linebreak command

    PIPE  shift, and go to state 36

    $default  reduce using rule 7 (and_or)


State 59

    9 pipeline: pipeline PIPE linebreak command •

    $default  reduce using rule 9 (pipeline)


State 60

    6 and_or: and_or • AND_IF linebreak pipeline
    7       | and_or • OR_IF linebreak pipeline
   16 term: term newline_list and_or •

    AND_IF  shift, and go to state 34
    OR_IF   shift, and go to state 35

    $default  reduce using rule 16 (term)
